# django_document_catalogue

./: .gitignore  AUTHORS  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tasks.py  tox.ini
.github/workflows/: pytest.yaml
demo/: README.md  README.rst  settings.py  urls.py  wsgi.py
demo/fixtures/: categories.json  documents.json
demo/settings/: defaults.py  demo.py  dev.py
demo/static/: dc-demo.css
demo/templates/: base.html  index.html
demo/templates/document_catalogue/: base.html
demo/templates/registration/: login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html
docs/: .readthedocs.yaml  .readthedocs.yml  conf.py  index.md  index.rst  requirements.in  requirements.txt  requirements_docs.txt  settings.py
docs/api/: index.rst
docs/pages/: plugins.rst  quick_start.rst  settings.rst  setup.rst
docs/source/: conf.py
docs/source/api/: models.rst  permissions.rst  plugins.rst  views.rst
docs/source/pages/: plugins.rst  setup.rst
document_catalogue/: __init__.py  admin.py  apps.py  decorators.py  fields.py  forms.py  models.py  permissions.py  plugins.py  settings.py  urls.py  views.py  views_generic.py
document_catalogue/migrations/: 0001_initial.py  0002_auto_20200522_2247.py  0002_tighten_field_constraints.py
document_catalogue/static/document_catalogue/: document_catalogue.js
document_catalogue/templates/document_catalogue/: base.html  categories_list.html  category_document_list.html  document_confirm_delete.html  document_detail.html  document_edit.html  documents_by_category_list.html
document_catalogue/templates/document_catalogue/ajax/: document_item.html  form_errors.html
document_catalogue/templates/document_catalogue/include/: breadcrumb.html  categories.html  category-header.html  doc_ordering.html  doc_search.html  document.html  documents.html  dropzone.html  inline_clearable_file_input.html
document_catalogue/templatetags/: form_tags.py  permissions_tags.py
document_catalogue/tests/: __init__.py  base.py  settings.py  test_models.py  test_plugins.py  test_views.py  urls.py
document_catalogue/tests/settings/: base.py  private.py  public.py
tasks/: __init__.py  docs.py  pypi.py
tests/: base.py  test_models.py  test_plugins.py  test_views.py  urls.py
tests/settings/: base.py  private.py  public.py
