[build-system]
    requires = ["setuptools"]
    build-backend = "setuptools.build_meta"

[project]
    name = "django-document-catalogue"
    authors = [
        {name = "powderflask", email = "powderflask@gmail.com"},
    ]
    maintainers = [
        {name = "powderflask", email = "powderflask@gmail.com"},
    ]
    description = "A simple, lightweight, stand-alone, hierarchical document library as a reusable Django app."
    readme = "README.rst"
    requires-python = ">=3.7, <4"
    keywords = ["Django", "Python"]
    license = {file = "LICENSE"}
    classifiers = [
        "Development Status :: 4 - Beta",
        "Environment :: Web Environment",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3",
        "Framework :: Django",
    ]
    dependencies = [
        "Django>=3.2,<4.0",
        "django-constrainedfilefield>=3.2.0",
        "django-mptt>=0.10.0",
        "python-magic>=0.4.15",
        "django-private-storage>=2.2",
        "django-admin-sortable2>=1.0,<2.0",  # 2.x dependent on Django 4.x
    ]
    dynamic = ["version"]

[project.optional-dependencies]
    dev = [
        "django-debug-toolbar",
        "invoke",
        "sphinx",
        "sphinx-rtd-theme",
        "myst-parser",
        "build",
        "twine",
    ]

[project.urls]
    Repository = "https://github.com/powderflask/django_document_catalogue"
    Documentation = "https://django-document-catalogue.readthedocs.io"

[tool.setuptools]
    include-package-data = true  # True by default, declarations in MANIFEST.in

[tool.setuptools.packages.find]
    include = ["document_catalogue", "document_catalogue.*"]
